# Insta-Save-Bot

./: .gitignore  LICENSE  alembic.ini  loader.py  pyproject.toml  requirements.txt
apps/bot/: send_video.py
apps/video_edit/: download_video.py
data/: config.py
handlers/users/: __init__.py  help.py  insta_media.py  start.py
migrations/: env.py
migrations/versions/: 0baa3e95c048_create_table.py  15894e2007e4_edit_table1.py  b02690517ee5_edit_table.py  e87d9203b02f_edit_table.py
utils/: set_bot_commands.py
utils/db_api/: models.py  queries.py
utils/db_api/db/: base.py  base_class.py  session.py
