[tool.poetry]
name = "insta-save-bot"
version = "0.1.0"
description = ""
authors = ["Khasanjon <khasanjon.eng@gmail.com>"]
readme = "README.md"
packages = [{include = "insta_save_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
instaloader = "^4.10"
environs = "^9.5.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
